# Apt4ssv3

./: .gitignore  LINUX_PORT.txt  configure.ac  configure.scan  contributors.txt
src/: INCFIL.COPY  Makefile.am  clean  dummy.f  fort1.f  fort2.f  fort3.f  fort4.f
src/APTFUN/: M0002884.V03
src/APTGEOM/: M0000693.V06  M0000759.V03  M0000760.V03  M0000762.V02  M0000776.V02  M0000778.V03  M0000780.V03  M0000781.V03  M0000788.V02  M0000790.V03  M0000806.V02  M0002232.V06  M0002722.V08
src/ARELEM/: ISVCPY00.ORG  M0000714.V04  M0000733.W01  M0000853.V08  M0000869.V05  M0000888.V05  M0000905.W01  M0000913.V05  M0000916.V01  M0000955.V02  M0001497.V03  M0002734.V07  M0002742.W07  M0002750.V06  M0002864.V06  SVCOPY00.ORG
src/AUXILARY/: M0000706.W01  M0000827.V03  M0000831.V02  M0000848.V07  M0000897.V04  M0000903.V06  M0000991.V03  M0001127.V02  M0001865.W01  M0002773.V01  M0002844.V04
src/CLEDITOR/: M0000421.V01  M0000424.V01  M0000428.V05  M0000432.V06  M0000443.V01  M0004202.V09  M0011539.W03
src/GOLOFT/: M0011488.V01  M0012238.V01  M0012321.V02  M0012323.V01  M0012349.V02  M0012399.V01  M0012405.V03
src/GOUGECHK/: MIDPNT.V01
src/IBM/: CLOSPE00.IBM;1  M0002827.IBM;1  M0006620.IBM;1  PARNOM00.IBM;1
src/ILEDITOR/: M0006664.V01
src/INTCHECK/: BDAVCP.ORG  BDINID.ORG  CURINT.V01  DEGSOL.ORG  NORMA.ORG  PENCUT.V01  RESTOR.ORG  SHELLA.ORG  TECALC.ORG
src/LOADCOMP/: M0006710.V08  M0006717.W02  M0006718.W01  M0006721.W01  M0006724.W01  M0006728.V01  M0007343.X01  SHIFT000.ORG
src/NONNATIV/: ETORUS.ORG  M0008176.V01  M0008177.V01  M0008178.V02
src/REGMILL/: M0001045.W01  M0001051.V01  M0001068.V05  M0001070.W02  M0001072.W01  M0001074.V02  M0001081.W07  M0001097.W01  M0001113.W01  M0001126.W07
src/SSARELEM/: M0001064.V02  M0001084.W02  M0004323.W03
src/SSDATA/: SSDAT3.ORG
src/SSEVAL/: M0001054.V01
src/SSGEOM/: M0000613.V01  M0000627.V02  M0000648.V01  M0001014.W01  M0001121.V01  M0001226.V04  M0001505.V08  M0001869.W01  M0001897.V03  M0002659.V03  M0002769.W01  M0002770.V02  M0004147.V02  M0004151.V04  M0004288.W02
src/TRANSLAT/: M0000449.ORG  M0000500.V03  M0000502.W01  M0006617.V01  M0006618.V01  M0006621.W02  M0006628.V04  M0006632.V02  M0006635.W01  M0006639.W01  M0006640.W01  M0006649.V07  M0006656.V03  M0006662.W01  M0006665.W01  M0006669.V10  M0006674.V01  M0006676.V03  M0006677.W02  M0006684.V01  M0006689.V03
src/UNLOAD/: UNLOAD
src/UTILITY/: ABCDBN00.ORG  ATAPXC00.ORG  BCDF0000.W01  CARDPN00.V01  CHREAD00.ORG  CPUNCH00.V01  M0001088.V03
src/VAX/: ADDRSS00.ORG  BDLIBCOM.V01  LIBOPC00.W01  OUTSET00.ORG  PUNCHA00.ORG  TAPEPN00.ORG
src/XECUTION/: M0000732.V07  M0000952.V04  M0000959.W01  M0001190.V14  M0002658.W03  UNASGN00.ORG
src/aptfun/: APTFUN.f  CANF.f  M0002891.V03  M0004164.V08  M0011451.V08  MINMAX.f  PARMF.f  SPATF.f  UTILTY.f  UTILTY00.ORG  dotf.f
src/aptgeom/: APT003.f  APT008.f  APT009.f  APT011.f  APT013.f  APT014.f  APT015.f  APT016.f  APT018.f  APT021.f  APT025.f  APT026.f  APT030.f  APT033.f  APT035.f  APT038.f  APT041.f  APT043.f  APT045.f  APT048.f  APT049.f  APT050.f  APT052.f  APT057.f  APT059.f  APT062.f  APT063.f  APT065.f  APT066.f  APT068.f  APT069.f  APT071.f  APT073.f  APT074.f  APT089.f  APT090.f  APT105.f  APTGEOM.f  M0000752.V03  M0000753.V03  (+39 more)
src/arelem/: AERR.f  ALTCMV.ORG  APT232.f  APT236.f  APT240.f  ARELEM.f  ARLM3.f  BLDGOU.ORG  CCURV.f  CHECK.f  CPLAN.f  CUT.f  DDLIM.f  DDPARA.f  DDPARS.f  DNTCUT.f  GODLTA.f  ISVCPY00.ORG  M0000647.V01  M0000702.W03  M0000712.W02  M0000714.V04  M0000735.W01  M0000853.V08  M0000854.W01  M0000856.V03  M0000884.ORG  M0000888.V05  M0000889.V07  M0000893.W04  M0000904.V04  M0000913.V05  M0000937.V02  M0000948.ORG  M0000950.V03  M0000955.V02  M0000971.V03  M0001497.V03  M0001877.V04  M0001934.V11  (+24 more)
src/auxilary/: AFORM000.ORG  APT024.f  APT076.f  APT085.f  APT100.f  APT202.f  APT298.f  APT299.f  AUXILARY.f  BDEBUF.f  CHKRET.f  CIRDEF.f  CKDEF.f  CKDEF000.V01  DARSIN.f  DARSIN00.ORG  ERROR.f  ERROUT.f  GCONE.f  GCUBIC.f  GCYL.f  GPLANE.f  LINDEF.f  LOGIF.f  M0000630.V01  M0000695.V06  M0000726.ORG  M0000736.V04  M0000825.V03  M0000826.V02  M0000829.V02  M0000832.V04  M0000861.V02  M0000873.V02  M0000907.V01  M0000918.V01  M0000921.V02  M0000957.V01  M0000960.V01  M0001206.W02  (+24 more)
src/cleditor/: APT301.f  APT305.f  APT309.f  APT311.f  APT313.f  APT331.f  APT332.f  APT335.f  APT336.f  APT340.f  APT341.f  APT342.f  CLED.f  CLEDITOR.f  CLEROR.f  M0000420.V01  M0000422.V02  M0000429.V03  M0000441.V02  M0000442.V02  M0000444.V04  M0000607.V02  M0001850.V13  M0002942.V03  M0004176.V02  M0011533.W02
src/f2cExperiment/: ABCDBN.c  ABLKDATA.c  ABUFTP.c  ABW.c  ACNTRL.c  ADDRSS.c  ADER.c  ADV.c  AERR.c  AERR2.c  AFORM.c  ALARM.c  ALGO1.c  ALGO2.c  ALTCMV.c  AMIND.c  ANDF.c  ANGDER.c  ANGLFB.c  ANGSEG.c  APRIX.c  APT001.c  APT003.c  APT004.c  APT005.c  APT006.c  APT007.c  APT008.c  APT009.c  APT010.c  APT011.c  APT012.c  APT013.c  APT014.c  APT015.c  APT016.c  APT017.c  APT018.c  APT019.c  APT020.c  (+590 more)
src/goloft/: BDGLFL.ORG  CPLDST.f  GCLEAR.f  GOLOFT.f  GOP.f  INTFA1.f  INTOUT.f  INTTRC.f  M0004614.V01  M0005847.V01  M0011489.V01  M0011516.V03  M0012104.V05  M0012108.V03  M0012230.V01  M0012234.V04  M0012236.V02  M0012240.V01  M0012242.V01  M0012301.V02  M0012316.V02  M0012333.V01  M0012335.V02  M0012375.V01  M0012387.V01  M0012393.V01  NUMVER.f  PLAPOL.f  POLMTN.f  PRO028.f  QABPST.ORG  TLCONV.f
src/gougechk/: DEVCAL.V01  GCHK.f  GOUGECHK.f  MIDKUR.f  XTPCAL.V01
src/ibm/: .PARNOM00.IBM;1.swp  ADDRSS.f  APT201.f  APT241.f  ARTIME.f  ARTIME00.IBM;1  BD2ITL.f  CLOSPE.f  CPUTIM.f  CPUTIM00.IBM;1  CUTTER.f  FILOPN.f  FILOPN00.IBM;2  FINDME.f  GO.f  IBM.f  LIBOPC.f  LIBOPC00.IBM;2  LIBRD.f  LIBSCH.f  LIBSCH00.IBM;2  M0002726.IBM;1  M0004132.IBM;2  OUTSET.f  OUTSET00.IBM;1  PARNOM.f  PUNCHA.f  PUNCHA00.IBM;2  PUNCHC.f  PUNCHC00.IBM;1  TAPEPN.f  TAPEPN00.IBM;1  WTDIRE.f  WTDIRE00.IBM;1
src/ibmassem/: M0000860.ORG
src/ibmbitcm/: M0006723.IBM
src/ileditor/: CILOUT.f  COMPRS.f  EPILOG.f  ICMPRS.f  IEPLOG.f  ILEDITOR.f  IPRLOG.f  M0006626.W04  M0006630.V01  M0006636.W02  M0006642.V03  M0006681.V05  (+3 more)
(+9635 files in other folders)
