#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([apt4ssv3], [VERSION], [BUG-REPORT-ADDRESS])

# Checks for programs.
AC_PROG_FC
AC_PROG_F77
# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/loadcomp/Makefile 
		 src/Makefile src/include/Makefile])
AC_OUTPUT
AM_INIT_AUTOMAKE
