
apt4ssv3_FFLAGS = -I$(top_srcdir)/src/include -ffixed-form  -fdollar-ok -g -fno-range-check \
		-fno-automatic -O0

AM_FCFLAGS = -I$(top_srcdir)/src/include  #-O0


bin_PROGRAMS=apt4ssv3

apt4ssv3_SOURCES = aptgeom/APTGEOM.f arelem/ARELEM.f goloft/GOLOFT.f \
aptfun/UTILTY.f \
aptfun/ANGLFB.f \
aptfun/NEWFUNCS.f \
aptfun/CANF.f \
aptfun/DOTF.f \
aptfun/DISTF.f \
aptfun/MINMAX.f \
aptfun/NUMF.f \
aptfun/PARMF.f \
aptfun/SPATF.f \
aptfun/LNTHF.f \
ileditor/ILEDITOR.f gougechk/GOUGECHK.f ssarelem/SSARELEM.f \
ssdata/SSDATA.f postexec/POSTEXEC.f sseval/SSEVAL.f ssgeom/SSGEOM.f \
cleditor/CLEDITOR.f regmill/REGMILL.f nonnativ/NONNATIV.f \
intcheck/INTCHECK.f translat/TRANSLAT.f auxilary/AUXILARY.f \
vax/VAX.f xecution/XECUTION.f supervis/LINKF.f supervis/SYMFIL.f \
supervis/GETPRM.f supervis/FLTAB.f supervis/SSV3.f \
supervis/CRTN.f supervis/ABLKDATA.f supervis/SPRVIS.f  \
utility/UTILITY.f \
vax/apt211.f dummy.f fort1.f fort2.f fort3.f



