

noinst_HEADERS = ADDCOM.INC\
	ALLBTS.INC\
	ASSOC.INC\
	ATFLG.INC\
	AVCPRM.INC\
	BLANKCOM.INC\
	CFSIZE.INC\
	CGOUG.INC\
	CHANG.INC\
	CHEKFL.INC\
	CLDT.INC\
	CLERR.INC\
	CLHOLRTH.INC\
	COMMONS.INC\
	CSTART.INC\
	DARRAY.INC\
	DEF.INC\
	DSHAR3.INC\
	DSHAR4.INC\
	DSHAR5.INC\
	DSHAR6.INC\
	DSNAME.INC\
	ERRTXT.INC\
	EXERR.INC\
	FILTAB.INC\
	FXCOR.INC\
	GLFLGS.INC\
	GMTY.INC\
	HOLRTH.INC\
	IBRKPT.INC\
	IBUGG.INC\
	IDEF.INC\
	IFXCOR.INC\
	INCFIL.COPY\
	INCFIL.INC\
	INIDAT.INC\
	INTERF.INC\
	INTRPEQ.INC\
	ISHR16.INC\
	ISHR17.INC\
	ISHR18.INC\
	ISV.INC\
	KNUMBR.INC\
	LDEF.INC\
	LDSCOM.INC\
	LIBCOM.INC\
	LOKAL.INC\
	Makefile.am\
	NAMETB.INC\
	NUMBLK.INC\
	OUTBUF.INC\
	PRODN.INC\
	RMFLGS.INC\
	SDP.INC\
	SEQCOM.INC\
	SRFNAM.INC\
	SSPAD.INC\
	STOR.INC\
	SUPER.INC\
	SV.INC\
	SYMFIL.INC\
	TAC.INC\
	TLLDAT.INC\
	TOTAL.INC\
	WORK.INC\
	XUNITS.INC\
	ZNUMBR.INC
